riordinato css link ok! posizionato icona sul titolo ok!

--- a/style_wordpress.css
+++ b/style_wordpress.css
@@ -14,7 +14,7 @@ header{
   width: 95%;
   height: 300px;
   margin: auto;
-  border: 10px solid #fff;
+  border: 10px solid #f9f9f9;
   background-image: url("forest.jpg");
   background-size: cover;
   position: relative;
@@ -33,23 +33,32 @@ header{
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  border: 3px solid white;
+  border: 3px solid #f9f9f9;
   padding: 10px 15px;
   font-size: 25px;
-  color: white;
+  color: #f9f9f9;
 }
 
 .icon{
-  color: white;
+  color: #f9f9f9;
   font-size: 45px;
   position: absolute;
-  top: 50%;
+  top: 23%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%,-23%);
+}
+
+.rss{
+  color: orange;
+  font-size: 15px;
 }
 
 nav{
   background-color: #514337;
+}
+
+li:last-child {
+  border-right: none;
 }
 
 ul li{
@@ -65,11 +74,11 @@ ul{
 
 .menu > a{
   text-decoration: none;
-  color: white;
+  color: #f9f9f9;
 }
 
 .menu > a:hover{
-  color: gray;
+  color: grey;
 }
 
 nav{
@@ -78,51 +87,75 @@ nav{
   margin: auto;
 }
 
-.colonna_sx{
+.colonna_sx,
+.colonna_cent,
+.colonna_dx,
+.colonna_dx_2{
   font-size: 15px;
-  width: 20%;
-  margin: 2.5% 2.5%;
   float: left;
-  background-color: white;
-  padding: 15px 15px;
+  background-color: #f9f9f9;
+  padding: 20px 15px;
 }
 
-.colonna_sx > a:visited{
+.colonna_sx{
+  width: 20%;
+}
+
+.colonna_sx,
+.colonna_dx{
+  margin: 2.5% 2.5%;
+}
+
+.colonna_cent{
+  width: 40%;
+  margin-top: 2.5%;
+}
+
+.colonna_dx,
+.colonna_dx_2{
+  width: 30%;
+}
+
+.colonna_dx_2{
+  margin-left: 2.5%;
+}
+
+a{
+  text-decoration: none;
+}
+
+.colonna_sx > a{
   color: #b1e24f;
+}
+
+.colonna_sx > a:hover{
+  color: grey;
+}
+
+.colonna_sx > a:active{
+  color: blue;
 }
 
 .colonna_cent a:visited{
   color: #b1e24f;
 }
 
-.colonna_cent{
-  font-size: 15px;
-  width: 40%;
-  margin-top: 2.5%;
-  float: left;
-  background-color: white;
-  padding: 20px 20px;
-
+.colonna_cent a:hover{
+  color: grey;;
 }
 
-.colonna_dx{
-  font-size: 15px;
-  width: 30%;
-  height: 150px;
-  margin: 2.5% 2.5%;
-  float: left;
-  background-color: white;
-  padding: 20px 20px;
+.colonna_cent a:active{
+  color: blue;
 }
 
-.colonna_dx_2{
-  font-size: 15px;
-  width: 30%;
-  margin-left: 2.5%;
-  float: left;
-  background-color: white;
-  padding: 20px 20px;
-}
 .colonna_dx_2 a:visited{
   color: #b1e24f;
+}
+
+.colonna_dx_2 a:hover{
+  color: grey;
+}
+
+.colonna_dx_2 a:active{
+  color: blue;
 }
